# lorenzo-maiuri-chatbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  terraform.yml
data/: bio.txt  case_studies.json  certifications.json  contact.json  education.json  engagement.json  projects.json  skills.json  work_experience.json
infra/: main.tf  outputs.tf  variables.tf
infra/modules/artifact_registry/: main.tf  outputs.tf
infra/modules/cloudrun/: main.tf  outputs.tf  variables.tf
infra/modules/firestore/: main.tf  variables.tf
infra/modules/secrets/: main.tf  outputs.tf  variables.tf
infra/modules/wif/: main.tf  outputs.tf  variables.tf
prompts/: availability_agent.md  contact_agent.md  main_agent.md  project_agent.md  router_agent.md  technical_agent.md
scripts/: export_openapi.py  ingest.py
src/: app.py
src/api/: endpoints.py
src/core/: agent_orchestrator.py  config.py  database.py  models.py  security.py  services.py  tools.py  vector_store.py
src/utils/: constants.py  logger.py  utils.py
tests/: test_chatbot.py
