[project]
name = "lorenzobot-backend"
version = "2.0.0"
description = "AI chatbot backend for lorenzomaiuri.dev"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.48.0",
    "google-cloud-firestore",
    "httpx",
    "pydantic>=2.5.0",
    "llama-index-core>=0.14.0",
    "llama-index-llms-google-genai>=0.1.14",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
otel = [
    "arize-phoenix-otel>=0.10.1",
    "openinference-instrumentation-llama_index>=4.3.0",
]
dev = [
    "pytest>=8.4.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov",
    "asgi-lifespan==2.1.0",
    "ruff",
    "mypy",
    "pre-commit",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["llama_index.*", "openinference.*", "phoenix.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
